# biomarker-score-calculator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: release-build.yml
.github/workflows/: release-build.yml
examples/: README.md  and_rule_1.json  simple_rule_1.json  simple_rule_2.json  simple_rule_3.json
src/: defaults.rs  lib.rs  main.rs  models.rs
src/models/: full_models.rs  minimum_models.rs  mod.rs  traits.rs
src/rules/: engine.rs  mod.rs  schema.rs
src/scores/: calculate.rs  map.rs  overwrite.rs
