[package]
name = "biomarker-score-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
rust_decimal = "1.35.0"
